<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_login"
        android:padding="16dp">

        <ImageView
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ecn_logo" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorHint"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorAccent"
            android:textColorHint="@color/colorHint"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorButtonText"
            android:background="@drawable/btn_login"/>

    </LinearLayout>

</RelativeLayout>
