<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertesData">

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/ecn_color"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginBottom="60dp"
            android:background="@android:color/white"
            android:contentDescription="@string/reload"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <ImageButton
            android:id="@+id/toggle_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|start"
            android:layout_marginLeft="-160dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toggle_menu_button"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_menu_24" />

        <Space
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="5dp"

            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_add_24" />

        <ImageButton
            android:id="@+id/notif"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_notifications_24" />

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_button"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_account_circle_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="ADD ALERT"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/alert_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/mes_alertes"
            android:minHeight="48dp"
            android:textColorHint="@color/colorHint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_alerte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>